--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My gulp</title>
-    <link rel="stylesheet" href="./css/main.css" />
-  </head>
+  @@include("./includes/_head.html", {"title": "Project Title"})
   <body>
     Hello, this project is built by my-gulp
   </body>
